Fix tests in services and deleting table